@@ -1,3 +1,5 @@
 DIST minitunes-0.1.1.tar.gz 210701 RMD160 f6f0a5cfb1c24a1c1b1e8a519cae531461b2abfc SHA1 3e864199a72e16c720a1c724132dd2cc7d4ef82d SHA256 b8610e61ac69ba15637bf74a88db089d1ba58445b3cc3b0d40d2d37f98899c3b
-EBUILD minitunes-0.1.1.ebuild 572 RMD160 82f71e02c954e07169ed8d8fc2a99f8fc298f0ec SHA1 cdc2b304244e1a055fd9dcf65c62844595b9af69 SHA256 7772f499ac1d94ec2d76f96f72bf4b27859fa3ef07da483be11f9b2127b4153c
-MISC ChangeLog 240 RMD160 13977e19d7020d4f9056bacf5d227fc373b98595 SHA1 9eb5aafaf02ef00e7bf0cfc5b4d2cb18d5e3b0e4 SHA256 6fd80be27a0eabc8b53cf22c2f55c44a21c1ff4b9c3faeed2838df96bb3c16bc
+EBUILD minitunes-0.1.1.ebuild 571 RMD160 fe89d45ae72651b4710c787a1b5ccdba6ff5088c SHA1 e85b8ad96380a0b24fefd6e36c5d9f8aa08c2687 SHA256 ed41e6fea8ab3176d629ddff9efbca5344aaae7416c1ff962cdbfa731a3f67f1
+EBUILD minitunes-9999.ebuild 556 RMD160 a4363303054528b67c1e6c8287ab0ee3bbc6350c SHA1 86e16480c5317754e7b6367cd1c9543df3d70ceb SHA256 4c00739ab2e51b3e88bc18b602b75fbb063d85da626bbbd3532c361c0cc7edc8
+MISC ChangeLog 414 RMD160 3f0053ca1ef5409252c2adceb6c5ced93655b8b0 SHA1 2d79d39b897d29fe194ef61e2764c6772cdbd585 SHA256 fe1c0ad6b6d331fdb9812fd63e456912ac73317c820ef26237bb32073fb7249a
+MISC metadata.xml 226 RMD160 093e2a5510979ff71f1f585e71eca1f015350a00 SHA1 bf06e32067d1d1968de31788927d267dd3f8208d SHA256 015b1c2b2efefed02f3bd9413e0abffd97ee2d0bec2cc90bc5e0f5ff6fc00f0c
